--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -21,22 +21,13 @@ Here you can find assignments on different topics.
 7. Add an R command within the text.
 8. Create an HTML file from the Rmd file.
 
+For tips on Rmarkdown, see [Rmarkdown cheat sheet](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown-2.0.pdf)
+
 ## Data containers
 
-### Introduction to TreeSummarizedExperiment (TreeSE)
+### TreeSummarizedExperiment data exploration
 
-Import data from CSV files to TreeSE.
-
-1. Import data.
-2. Construct a TreeSE.
-3. Check that importing is done correctly. E.g., you can choose random samples and features,
-and check that their values equal between raw files and TreeSE.
-
-Useful functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
-
-### TreeSummarizedExperiment Data exploration
-
-1. install the latest development version of mia from GitHub.
+1. (Install the latest development version of mia from GitHub)
 2. Load experimental dataset from mia.
 3. What are the dimensions? (How many samples there are, and how many taxa in each taxonomic rank)?
 4. Calculate library size.
@@ -44,9 +35,18 @@ Useful functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colname
 6. Create two histograms. Another shows the distribution of absolute counts, another shows how CLR transformed values are distributed.
 7. Visualize how relative abundances are distributed between taxa in samples.
 
-
 Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformSamples, ggplot, wilcox.test, addPerCellQC, agglomerateByRank, plotAbundance
 
+### TreeSummarizedExperiment (TreeSE) data import
+
+Import data from CSV files to TreeSE.
+
+1. Import the data files in R
+2. Construct a TreeSE data object
+3. Check that importing is done correctly. E.g., choose random samples and features,
+and check that their values equal between raw files and TreeSE.
+
+Useful functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
 
 
 ### Introduction to MultiAssayExperient (MAE)
