--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -35,9 +35,12 @@ the one presented at [@Salosensaari2021] supplementary figure 1, could
 be visualized as follows:
 
 ```{r, warning=FALSE, message=FALSE}
-# Loading data
-library(microbiomeDataSets)
-tse <- atlas1006()
+# Loading example data
+#library(microbiomeDataSets)
+#tse <- atlas1006()
+library(miaTime)
+data(hitchip1006)
+tse <- hitchip1006
 
 # Add relative abundances
 tse <- transformSamples(tse, method = "relabundance")
