add LinDA to DAA; minor updates to material

--- a/book.bib
+++ b/book.bib
@@ -865,17 +865,20 @@ Bioconductor},
 }
 
 
-@techreport{nearingMicrobiomeDifferentialAbundance2021,
-  type = {Preprint},
-  title = {Microbiome Differential Abundance Methods Produce Disturbingly Different Results across 38 Datasets},
-  author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly and MacDonald, Jocelyn and Desai, Dhwani and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn and Dhanani, Akhilesh and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
-  year = {2021},
-  month = may,
-  institution = {{Bioinformatics}},
-  doi = {10.1101/2021.05.10.443486},
-  abstract = {Abstract           Identifying differentially abundant microbes is a common goal of microbiome studies. Multiple methods have been applied for this purpose, which are largely used interchangeably in the literature. Although it has been observed that these tools can produce different results, there have been very few large-scale comparisons to describe the scale and significance of these differences. In addition, it is challenging for microbiome researchers to know which differential abundance tools are appropriate for their study and how these tools compare to one another. Here, we have investigated these questions by analyzing 38 16S rRNA gene datasets with two sample groups for differential abundance testing. We tested for differences in amplicon sequence variants and operational taxonomic units (referred to as ASVs for simplicity) between these groups with 14 commonly used differential abundance tools. Our findings confirmed that these tools identified drastically different numbers and sets of significant ASVs, however, for many tools the number of features identified correlated with aspects of the tested study data, such as sample size, sequencing depth, and effect size of community differences. We also found that the ASVs identified by each method were dependent on whether the abundance tables were prevalence-filtered before testing. ALDEx2 and ANCOM produced the most consistent results across studies and agreed best with the intersect of results from different approaches. In contrast, several methods, such as LEfSe, limma voom, and edgeR, produced inconsistent results and in some cases were unable to control the false discovery rate. In addition to these observations, we were unable to find supporting evidence for a recent recommendation that limma voom, corncob, and DESeq2 are more reliable overall compared with other methods. Although ALDEx2 and ANCOM are two promising conservative methods, we argue that those researchers requiring more sensitive methods should use a consensus approach based on multiple differential abundance methods to help ensure robust biological interpretations.},
+@article{nearingMicrobiomeDifferentialAbundance2022,
+  title = {Microbiome Differential Abundance Methods Produce Different Results across 38 Datasets},
+  author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly G. and MacDonald, Jocelyn and Desai, Dhwani K. and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn J. and Dhanani, Akhilesh S. and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
+  year = {2022},
+  month = dec,
+  journal = {Nature Communications},
+  volume = {13},
+  number = {1},
+  pages = {342},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-022-28034-z},
+  abstract = {Abstract             Identifying differentially abundant microbes is a common goal of microbiome studies. Multiple methods are used interchangeably for this purpose in the literature. Yet, there are few large-scale studies systematically exploring the appropriateness of using these tools interchangeably, and the scale and significance of the differences between them. Here, we compare the performance of 14 differential abundance testing methods on 38 16S rRNA gene datasets with two sample groups. We test for differences in amplicon sequence variants and operational taxonomic units (ASVs) between these groups. Our findings confirm that these tools identified drastically different numbers and sets of significant ASVs, and that results depend on data pre-processing. For many tools the number of features identified correlate with aspects of the data, such as sample size, sequencing depth, and effect size of community differences. ALDEx2 and ANCOM-II produce the most consistent results across studies and agree best with the intersect of results from different approaches. Nevertheless, we recommend that researchers should use a consensus approach based on multiple differential abundance methods to help ensure robust biological interpretations.},
   langid = {english},
-  file = {/Users/henrikeckermann/Zotero/storage/DQQR7BWJ/Nearing et al. - 2021 - Microbiome differential abundance methods produce .pdf}
+  file = {/Users/henrikeckermann/Zotero/storage/RL7S8KYH/Nearing et al. - 2022 - Microbiome differential abundance methods produce .pdf}
 }
 
 @article{linAnalysisCompositionsMicrobiomes2020,
@@ -955,3 +958,38 @@ Bioconductor},
     note = {https://patchwork.data-imaginist.com,
 https://github.com/thomasp85/patchwork},
   }
+
+
+@article{gloorDisplayingVariationLarge2016,
+  title = {Displaying {{Variation}} in {{Large Datasets}}: {{Plotting}} a {{Visual Summary}} of {{Effect Sizes}}},
+  shorttitle = {Displaying {{Variation}} in {{Large Datasets}}},
+  author = {Gloor, Gregory B. and Macklaim, Jean M. and Fernandes, Andrew D.},
+  year = {2016},
+  month = jul,
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {25},
+  number = {3},
+  pages = {971--979},
+  issn = {1061-8600, 1537-2715},
+  doi = {10.1080/10618600.2015.1131161},
+  abstract = {Displaying the component-wise between-group differences high-dimensional datasets is problematic because widely used plots such as Bland-Altman and Volcano plots do not show what they are colloquially believed to show. Thus, it is difficult for the experimentalist to grasp why the between-group difference of one component is `significant' while that of another component is not. Here we propose a type of `Effect Plot' that displays between-group differences in relation to respective underlying variability for every component of a high-dimensional dataset. We use synthetic data to show that such a plot captures the essence of what determines `significance' for between-group differences in each component, and provide guidance in the interpretation of the plot. Supplementary online materials contain the code and data for this paper, and includes simple R functions to produce an effect plot from suitable datasets.},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/RE6XBPGQ/Gloor et al. - 2016 - Displaying Variation in Large Datasets Plotting a.pdf}
+}
+
+@article{zhouLinDALinearModels2022,
+  title = {{{LinDA}}: Linear Models for Differential Abundance Analysis of Microbiome Compositional Data},
+  shorttitle = {{{LinDA}}},
+  author = {Zhou, Huijuan and He, Kejun and Chen, Jun and Zhang, Xianyang},
+  year = {2022},
+  month = dec,
+  journal = {Genome Biology},
+  volume = {23},
+  number = {1},
+  pages = {95},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-022-02655-5},
+  abstract = {Differential abundance analysis is at the core of statistical analysis of microbiome data. The compositional nature of microbiome sequencing data makes false positive control challenging. Here, we show that the compositional effects can be addressed by a simple, yet highly flexible and scalable, approach. The proposed method, LinDA, only requires fitting linear regression models on the centered log-ratio transformed data, and correcting the bias due to compositional effects. We show that LinDA enjoys asymptotic FDR control and can be extended to mixed-effect models for correlated microbiome data. Using simulations and real examples, we demonstrate the effectiveness of LinDA.},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/6A7ZLDAB/Zhou et al. - 2022 - LinDA linear models for differential abundance an.pdf;/Users/henrikeckermann/Zotero/storage/ZF97UC86/s13059-022-02655-5.pdf}
+}
