add LinDA to DAA; minor updates to material

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -54,7 +54,8 @@ evaluating whether or not they perform well for this task, are:
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend to have a look at @nearingMicrobiomeDifferentialAbundance2022 who compared all these listed methods across 38
+We recommend to have a look at @nearingMicrobiomeDifferentialAbundance2022 
+who compared all these listed methods across 38
 different datasets. Because different methods use different approaches
 (parametric vs non-parametric, different normalization techiniques, assumptions
 etc.), results can differ between methods. 
