--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -67,13 +67,13 @@ that can be recommended based on recent literature (ANCOM-BC, ALDEx2, Maaslin2
 and LinDA) and we will compare the results between them.
 Note that the purpose of this section is to show how to perform DAA in R, not
 how to correctly do causal inference. Depending on your experimental setup
-and your theory, you must determine how to specify model exactly. E.g., there
-might be confounding factors that might drive (the absence of) differences
-between the shown groups that we ignore here for simplicity. However, we will
-show how you could include covariates in those models. Furthermore, we picked a
-dataset that merely has microbial abundances in a TSE object as well as a
-grouping variable in the sample data. We simplify the analysis by only
-including 2 of the 3 groups. 
+and your theory, you must determine how to specify any model exactly. 
+E.g., there might be confounding factors that might drive (the absence of)
+differences between the shown groups that we ignore here for simplicity.
+However, we will show how you could include covariates in those models.
+Furthermore, we picked a dataset that merely has microbial abundances in a TSE
+object as well as a grouping variable in the sample data. We simplify the
+analysis by only including 2 of the 3 groups. 
 
 
 
