--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -119,11 +119,13 @@ tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 0.1)
 
 ### ALDEx2
 
-In this section, we will show how to perform a simple ALDEx2 analysis. If you wanted to pick a single method, this method could be recommended to use.
+In this section, we will show how to perform a simple ALDEx2 analysis. 
+If you wanted to pick a single method, this method could be recommended to use.
 According to the developers experience, it tends to identify the common
 features identified by other methods. This statement is in line with a recent
-independent evaluation by @nearingMicrobiomeDifferentialAbundance2022.  Please
-also have a look at the more extensive [vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html) 
+independent evaluation by @nearingMicrobiomeDifferentialAbundance2022.  
+Please also have a look at the more extensive 
+[vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html) 
 that covers this flexible tool in more depth. ALDEx2 estimates technical
 variation within each sample per taxon by utilizing the Dirichlet distribution.
 It furthermore applies the centered-log-ratio transformation (or closely
@@ -238,7 +240,8 @@ As we will see below, to obtain results, all that is needed is to pass
 a tse object to the `ancombc()` function. Below, we first specify a formula.
 In this formula, other covariates could potentially be included to adjust for
 confounding. We show this further below. 
-Please check the [function documentation](https://rdrr.io/github/FrederickHuangLin/ANCOMBC/man/ancombc.html) 
+Please check the
+[function documentation](https://rdrr.io/github/FrederickHuangLin/ANCOMBC/man/ancombc.html) 
 to learn about the additional arguments that we specify below.
 
 ```{r warning = FALSE}
@@ -317,7 +320,10 @@ kable(head(filter(fit_data$results, qval <= 0.05)))
 
 ### LinDA 
 
-Lastly, we cover linear models for differential abundance analysis of microbiome compositional data (@zhouLinDALinearModels2022). This tool is very similar to ANCOMBC with few differences: 1) LinDA correct for the compositional bias differently 
+Lastly, we cover linear models for differential abundance analysis of
+microbiome compositional data (@zhouLinDALinearModels2022). This tool is very
+similar to ANCOMBC with few differences: 1) LinDA correct for the compositional
+bias differently 
 using the mode of all regression coefficients. 2) The authors claim that it 
 runs 100-1000x faster than ANCOMBC and 3) it support hierarchical models.
 The latter could be ignored as ANCOMBC will be supporting hierarchical models
