add LinDA to DAA; minor updates to material

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -12,6 +12,7 @@ if(!"MicrobiomeStat" %in% installed.packages()[, "Package"]) {
    install.packages("MicrobiomeStat")
    devtools::install_github("FrederickHuangLin/ANCOMBC", ref = "develop")
 }
+devtools::install_github("FrederickHuangLin/ANCOMBC", ref = "develop")
 ```
 
 
