add LinDA to DAA; minor updates to material

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -5,16 +5,6 @@ library(rebook)
 chapterPreamble()
 ```
 
-```{r echo=FALSE, results="hide", warning = FALSE, message = FALSE}
-# this chunk will only be run once and can be deleted thereafter on this 
-# server (must be run if book will be run on another server though)
-if(!"MicrobiomeStat" %in% installed.packages()[, "Package"]) {
-   install.packages("MicrobiomeStat")
-   devtools::install_github("FrederickHuangLin/ANCOMBC", ref = "develop")
-}
-devtools::install_github("FrederickHuangLin/ANCOMBC", ref = "develop")
-```
-
 
 
 ## Differential abundance analysis
@@ -34,7 +24,7 @@ group with disease *X* vs a healthy control group might lead to
 important insights into the pathophysiology. Changes in the microbiota
 might be cause or a consequence of a disease. Either way, it can
 help to understand the system as a whole. Be aware that this approach
-has also been criticized recently [@quinnCritiqueDifferentialAbundance2021].
+has also been criticized recently [@Quinn2021].
 
 
 ### Examples and tools
@@ -55,12 +45,12 @@ evaluating whether or not they perform well for this task, are:
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend to have a look at @nearingMicrobiomeDifferentialAbundance2022 
+We recommend to have a look at @Nearing2022
 who compared all these listed methods across 38
 different datasets. Because different methods use different approaches
 (parametric vs non-parametric, different normalization techiniques, assumptions
 etc.), results can differ between methods. 
-Unfortunately, as @nearingMicrobiomeDifferentialAbundance2022 point out, they
+Unfortunately, as @Nearing2022 point out, they
 can differ substantially. Therefore, it is highly recommended to pick several
 methods to get an idea about how robust and potentially reproducible your
 findings are depending on the method. In this section we demonstrate 4 methods
@@ -108,7 +98,7 @@ set.seed(1)
 ### Prevalence Filtering 
 
 Before we jump to our analyses, we may want to perform prevalence filtering.
-@nearingMicrobiomeDifferentialAbundance2022 found that applying a 10% threshold
+@Nearing2022 found that applying a 10% threshold
 for the prevalence of the taxa generally resulted in more robust results. 
 Some tools have builtin arguments for that. By applying the threshold to our
 input data, we can make sure it is applied for all tools. Below we show how to
@@ -124,7 +114,7 @@ In this section, we will show how to perform a simple ALDEx2 analysis.
 If you wanted to pick a single method, this method could be recommended to use.
 According to the developers experience, it tends to identify the common
 features identified by other methods. This statement is in line with a recent
-independent evaluation by @nearingMicrobiomeDifferentialAbundance2022.  
+independent evaluation by @Nearing2022.  
 Please also have a look at the more extensive 
 [vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html) 
 that covers this flexible tool in more depth. ALDEx2 estimates technical
@@ -171,7 +161,7 @@ per sample. Next to that, we can also create a plot that shows the dispersion
 on the x-axis instead of log-ratio abundance. Red dots represent genera that are
 differentially abundant ($q \leq 0.1$) between the 2 groups. Black points are
 rare taxa and grey ones are abundant taxa. The dashed line represent an effect
-size of 1. See @gloorDisplayingVariationLarge2016 to learn more about these plots.
+size of 1. See @Gloor2016 to learn more about these plots.
 
 ```{r}
 par(mfrow = c(1, 2))
@@ -218,13 +208,13 @@ rownames_to_column(aldex_out, "genus") %>%
 ### ANCOM-BC
 
 The analysis of composition of microbiomes with bias correction 
-(ANCOM-BC) [@linAnalysisCompositionsMicrobiomes2020] 
+(ANCOM-BC) [@Huang2020] 
 is a recently developed method for differential abundance testing. It is based
 on an 
-earlier published approach [@mandalAnalysisCompositionMicrobiomes2015]. 
+earlier published approach [@Mandal2015]. 
 The previous version of ANCOM was among the methods that produced the 
 most consistent results and is probably a conservative approach
-[@nearingMicrobiomeDifferentialAbundance2022]. 
+[@Nearing2022]. 
 However, the new ANCOM-BC method operates quite differently compared to the
 former ANCOM method.
 
@@ -322,7 +312,7 @@ kable(head(filter(fit_data$results, qval <= 0.05)))
 ### LinDA 
 
 Lastly, we cover linear models for differential abundance analysis of
-microbiome compositional data (@zhouLinDALinearModels2022). This tool is very
+microbiome compositional data (@Zhou2022). This tool is very
 similar to ANCOMBC with few differences: 1) LinDA correct for the compositional
 bias differently 
 using the mode of all regression coefficients. 2) The authors claim that it 
@@ -521,7 +511,7 @@ package, that offers a Multinomial Logistic-Normal Linear Regression model; see
 
 
 The following presents such an exemplary analysis based on the 
-data of @sprockettMicrobiotaAssemblyStructure2020 available
+data of @Sprockett2020 available
 through `microbiomeDataSets` package.
 
 
