--- a/book.bib
+++ b/book.bib
@@ -848,7 +848,7 @@ Bioconductor},
 
 
 
-@article{quinnCritiqueDifferentialAbundance2021,
+@article{Quinn2021,
   title = {A {{Critique}} of {{Differential Abundance Analysis}}, and {{Advocacy}} for an {{Alternative}}},
   author = {Quinn, Thomas P. and {Gordon-Rodriguez}, Elliott and Erb, Ionas},
   year = {2021},
@@ -881,7 +881,7 @@ Bioconductor},
   file = {/Users/henrikeckermann/Zotero/storage/RL7S8KYH/Nearing et al. - 2022 - Microbiome differential abundance methods produce .pdf}
 }
 
-@article{linAnalysisCompositionsMicrobiomes2020,
+@article{Huang2020,
   title = {Analysis of Compositions of Microbiomes with Bias Correction},
   author = {Lin, Huang and Peddada, Shyamal Das},
   year = {2020},
@@ -929,6 +929,23 @@ Bioconductor},
   file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
 }
 
+
+@article{Sprockett2020,
+  title = {Microbiota Assembly, Structure, and Dynamics among {{Tsimane}} Horticulturalists of the {{Bolivian Amazon}}},
+  author = {Sprockett, Daniel D. and Martin, Melanie and Costello, Elizabeth K. and Burns, Adam R. and Holmes, Susan P. and Gurven, Michael D. and Relman, David A.},
+  year = {2020},
+  month = dec,
+  journal = {Nat Commun},
+  volume = {11},
+  number = {1},
+  pages = {3772},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-020-17541-6},
+  abstract = {Abstract             Selective and neutral forces shape human microbiota assembly in early life. The Tsimane are an indigenous Bolivian population with infant care-associated behaviors predicted to increase mother-infant microbial dispersal. Here, we characterize microbial community assembly in 47 infant-mother pairs from six Tsimane villages, using 16S rRNA gene amplicon sequencing of longitudinal stool and tongue swab samples. We find that infant consumption of dairy products, vegetables, and chicha (a fermented drink inoculated with oral microbes) is associated with stool microbiota composition. In stool and tongue samples, microbes shared between mothers and infants are more abundant than non-shared microbes. Using a neutral model of community assembly, we find that neutral processes alone explain the prevalence of 79\% of infant-colonizing microbes, but explain microbial prevalence less well in adults from river villages with more regular access to markets. Our results underscore the importance of neutral forces during microbiota assembly. Changing lifestyle factors may alter traditional modes of microbiota assembly by decreasing the role of neutral processes.},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
+}
+
 @article{davis2018simple,
   title={Simple statistical identification and removal of contaminant sequences in marker-gene and metagenomics data},
   author={Davis, Nicole M and Proctor, Diana M and Holmes, Susan P and Relman, David A and Callahan, Benjamin J},
@@ -960,7 +977,7 @@ https://github.com/thomasp85/patchwork},
   }
 
 
-@article{gloorDisplayingVariationLarge2016,
+@article{Gloor2016,
   title = {Displaying {{Variation}} in {{Large Datasets}}: {{Plotting}} a {{Visual Summary}} of {{Effect Sizes}}},
   shorttitle = {Displaying {{Variation}} in {{Large Datasets}}},
   author = {Gloor, Gregory B. and Macklaim, Jean M. and Fernandes, Andrew D.},
@@ -977,7 +994,7 @@ https://github.com/thomasp85/patchwork},
   file = {/Users/henrikeckermann/Zotero/storage/RE6XBPGQ/Gloor et al. - 2016 - Displaying Variation in Large Datasets Plotting a.pdf}
 }
 
-@article{zhouLinDALinearModels2022,
+@article{Zhou2022,
   title = {{{LinDA}}: Linear Models for Differential Abundance Analysis of Microbiome Compositional Data},
   shorttitle = {{{LinDA}}},
   author = {Zhou, Huijuan and He, Kejun and Chen, Jun and Zhang, Xianyang},
