add LinDA to DAA; minor updates to material

--- a/book.bib
+++ b/book.bib
@@ -865,7 +865,7 @@ Bioconductor},
 }
 
 
-@article{nearingMicrobiomeDifferentialAbundance2022,
+@article{Nearing2022,
   title = {Microbiome Differential Abundance Methods Produce Different Results across 38 Datasets},
   author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly G. and MacDonald, Jocelyn and Desai, Dhwani K. and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn J. and Dhanani, Akhilesh S. and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
   year = {2022},
@@ -897,7 +897,7 @@ Bioconductor},
 }
 
 
-@article{mandalAnalysisCompositionMicrobiomes2015,
+@article{Mandal2015,
   title = {Analysis of Composition of Microbiomes: A Novel Method for Studying Microbial Composition},
   shorttitle = {Analysis of Composition of Microbiomes},
   author = {Mandal, Siddhartha and Van Treuren, Will and White, Richard A. and Eggesb{\o}, Merete and Knight, Rob and Peddada, Shyamal D.},
