fixed version in ANCOMBC

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -73,12 +73,16 @@ analysis by only including 2 of the 3 groups.
 library(mia)
 library(patchwork)
 library(tidySummarizedExperiment)
-library(ANCOMBC)
 library(ALDEx2)
 library(Maaslin2)
 library(MicrobiomeStat)
 library(knitr)
 library(tidyverse)
+
+# For ANCOMBC we need development version
+# Can be installed with:
+# remotes::install_github("FrederickHuangLin/ANCOMBC")
+library(ANCOMBC)
 
 # we use the dmn_se dataset and restrict it to 
 # obese vs lean for easy illustration
@@ -237,7 +241,7 @@ to learn about the additional arguments that we specify below.
 
 ```{r warning = FALSE}
 # perform the analysis 
-out = ancombc(
+out <- ancombc(
   x = tse, 
   formula = "pheno", 
   p_adj_method = "fdr", 
