--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -319,6 +319,16 @@ includes one sample.
 `mergeSEs` works like `dplyr` joining functions. In fact, there are available
 `dplyr-like` aliases of `mergeSEs`, such as `full_join`.
 
+```{r include=FALSE}
+# REMOVE THIS CHUNK ################################################################
+if( !require(devtools) ){
+    install.packages("devtools")
+    library(devtools)
+}
+devtools::install_github("microbiome/mia")
+```
+
+
 ```{r merge1}
 # Take subsets for demonstrative purpose
 tse1 <- tse[, 1]
