--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -325,7 +325,8 @@ if( !require(devtools) ){
     install.packages("devtools")
     library(devtools)
 }
-devtools::install_github("microbiome/mia")
+devtools::install_github("microbiome/mia", upgrade = "never")
+library(mia)
 ```
 
 
