--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -17,6 +17,17 @@ For several custom analysis and visualization packages, such as those from the
 `tidyverse`, the `SE` data can be converted to long data.frame format with 
 `meltAssay`.    
 
+```{r include=FALSE}
+# REMOVE THIS CHUNK ################################################################
+# when bioc devel version has mergeSE 
+if( !require(devtools) ){
+    install.packages("devtools")
+    library(devtools)
+}
+devtools::install_github("microbiome/mia", upgrade = "never")
+library(mia)
+####################################
+```
 
 ```{r}
 library(mia)
@@ -45,16 +56,6 @@ Load:
 * dplyr
 * knitr
 * data `GlobalPatterns`
-
-```{r include=FALSE}
-# REMOVE THIS CHUNK ################################################################
-if( !require(devtools) ){
-    install.packages("devtools")
-    library(devtools)
-}
-devtools::install_github("microbiome/mia", upgrade = "never")
-library(mia)
-```
 
 ```{r include = FALSE}
 # load libraries and data
