--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -347,7 +347,7 @@ tse
 
 ```{r merge3}
 # left join preserves all the rows of the 1st object
-tse <- left_join(tse1, tse4, missing_values = 0)
+tse <- mia::left_join(tse1, tse4, missing_values = 0)
 tse
 ```
 
