--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -717,8 +717,12 @@ function](https://microbiome.github.io/microbiomeDataSets/reference/index.html)
 for a detailed documentation of the data contents and references. Let
 us retrieve a `r Biocpkg("MultiAssayExperiment")` data set:
 
-```{r, message=FALSE, eval=FALSE}
-mae <- HintikkaXOData()
+```{r eval=FALSE, message=FALSE}
+# mae <- HintikkaXOData()
+# Since HintikkaXOData is now added to mia, we can load it directly from there
+# We suggest to check other datasets from microbiomeDataSets
+data(HintikkaXOData)
+mae <- HintikkaXOData
 ```
 
 Data is available in `r Biocpkg("SummarizedExperiment")`, `r
