--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -56,7 +56,11 @@ data into SE object you can find from [here](https://microbiome.github.io/OMA/co
 
 ```{r cross-correlation1}
 # Load the data
-mae <- microbiomeDataSets::HintikkaXOData()
+# mae <- HintikkaXOData()
+# Since HintikkaXOData is now added to mia, we can load it directly from there
+# We suggest to check other datasets from microbiomeDataSets
+data(HintikkaXOData)
+mae <- HintikkaXOData
 
 mae
 ```
