--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -33,8 +33,8 @@ designed for microbial data.
 Load example data
 ```{r load-pkg-data}
 library(mia)
-library(microbiomeDataSets)
-mae <- HintikkaXOData()
+data(HintikkaXOData)
+mae <- HintikkaXOData
 ```
 
 Only the most prevalent taxa are included in analysis. 
