--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -136,6 +136,9 @@ we use _biclust_ method which is suitable for numeric matrices in general.
 # Samples must be in equal order 
 # (Only 1st experiment  was ordered in cobiclust step leading to unequal order)
 mae[[1]] <- mae[[1]][ , colnames(mae[[2]]) ]
+
+# Make rownames unique since it is require by other steps
+rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 # Calculate correlations
 corr <- getExperimentCrossCorrelation(mae, 1, 2, 
                                       assay_name1 = "clr", 
