--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -3,10 +3,6 @@
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
-if(!require(ecodist)){
-    install.packages("ecodist")
-    library(ecodist)
-}
 ```
 
 ```{r load-pkg-data}
@@ -41,7 +37,8 @@ rowData(tse)$Phylum <- as.character(phylum_renamed)
 
 # Visualizing the composition barplot, with samples order by "Bacteroidetes"
 plotAbundance(tse, assay_name="relabundance", rank = "Phylum",
-              order_rank_by="abund", order_sample_by = "Bacteroidetes")
+              order_rank_by="abund", 
+              order_sample_by = "Bacteroidetes")
 ```
 
 ### Composition heatmap 
@@ -94,15 +91,6 @@ package provides wrapper for _ComplexHeatmap_ and its usage is explained in chap
 along with the `pheatmap` package for clustered heatmaps.
 
 # Community typing {#community-typing}
-
-```{r setup2, echo=FALSE, results="asis"}
-if(!require(ecodist)){
-    install.packages("ecodist")
-    library(ecodist)
-}
-```
-
-
 
 ## Dirichlet Multinomial Mixtures (DMM)
 
