--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -3,10 +3,6 @@
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
-if(!require(ecodist)){
-    install.packages("ecodist")
-    library(ecodist)
-}
 ```
 
 ```{r load-pkg-data}
@@ -125,7 +121,7 @@ Computing the euclidean PCoA and storing it as a data frame
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
 tse <- transformSamples(tse, method = "relabundance", pseudocount = 1)
-tse <- transformCounts(tse, "relabundance", "clr")
+tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
 
 library(scater)
 # Calculate PCoA
