--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -365,8 +365,7 @@ bray_dmm_pcoa_df <- bray_pcoa_df
 bray_dmm_pcoa_df$dmm_component <- vec
 # Creates a plot
 bray_dmm_plot <- ggplot(data = bray_dmm_pcoa_df, 
-                             aes(x=pcoa1, y=pcoa2,
-                                 color = dmm_component)) +
+                        aes(x = pcoa1, y = pcoa2, color = dmm_component)) +
   geom_point() +
   labs(x = "Coordinate 1",
        y = "Coordinate 2",
