--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -634,7 +634,7 @@ plot
 ```
 
 Heatmaps find several other applications in biclustering and multi-assay
-analyses, that are discussed in chapters \@ref(biclustering) and
+analyses, that are discussed in chapters \@ref(clustering) and
 \@ref(multi-assay_analyses), where the packages _cobiclust_ and _MOFA2_ are of interest.
 
 
