--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -608,7 +608,7 @@ appropriate choice for comparing community compositions.
 
  - [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)
 
- - Chapter \@ref(community-typing) on community typing
+ - Chapter \@ref(clustering) on community typing
 
 ## Session Info {-}
 
