--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -150,8 +150,7 @@ from big datasets.
 
 For unsupervised machine learning, please refer to chapters that are listed below:
 
-- \@ref(community-typing)
-- \@ref(biclustering)
+- \@ref(clustering)
 - \@ref(community-similarity) 
 
 ## Session Info {-}
