--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -55,7 +55,7 @@ labels <- colData(tse)$Diet
 labels <- as.factor(labels)
 df$diet <- labels 
 
-head(df, 5)
+df[5, 5]
 ```
 
 In the example below, we use [mikropml](https://journals.asm.org/doi/10.1128/mBio.00434-20)
@@ -92,13 +92,13 @@ train_control <- trainControl(method = "cv", number = 5,
                               allowParallel = TRUE)
 
 # Specify hyperparameter tuning grid
-tune_grid <- expand.grid(nrounds = c(100, 200),
-                         max_depth = 6,
-                         colsample_bytree = c(0.8, 1),
+tune_grid <- expand.grid(nrounds = c(50, 100, 200),
+                         max_depth = c(6, 8, 10),
+                         colsample_bytree = c(0.6, 0.8, 1),
                          eta = c(0.1, 0.3),
                          gamma = 0,
-                         min_child_weight = c(4, 5),
-                         subsample = 0.8
+                         min_child_weight = c(3, 4, 5),
+                         subsample = c(0.6, 0.8)
                          )
 
 # Train the model, use LOOCV to evaluate performance
@@ -129,7 +129,7 @@ model$pred$obs_binary <- ifelse(model$pred$obs == "Mixed", 1, 0)
 predictions <- model$pred
 
 # Plot roc plot
-plot_roc <- ggplot(predictions, aes_string(m = "pred_binary", d = "obs_binary")) + 
+plot_roc <- ggplot(predictions, aes_string(m = "Mixed", d = "obs_binary")) +
     geom_roc(labels = FALSE, n.cuts = 0)
 
 # Create additional aesthetics and calculate AUC
