--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -150,8 +150,8 @@ from big datasets.
 
 For unsupervised machine learning, please refer to chapters that are listed below:
 
-- \@ref(clustering)
-- \@ref(community-similarity) 
+- Chapter \@ref(clustering)
+- Chapter \@ref(community-similarity) 
 
 ## Session Info {-}
 
