--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -123,7 +123,7 @@ if( !require(MLeval) ){
     library(MLeval)
 }
 # Calculate different evaluation metrics
-res <- evalm(model)
+res <- evalm(model, showplots = FALSE)
 
 # Use patchwork to plot ROC and precision-recall curve side-by-side
 library(patchwork)
