--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -40,15 +40,16 @@ devtools::install_github("microbiome/mia")
 
 ## Some available packages
 
-Some of the R packages supporting the framework include:
+Some of the R packages supporting the _TreeSummarizedExperiment_ framework include:
 
 - [mia](microbiome.github.io/mia) : Microbiome analysis tools   
 - [miaViz](microbiome.github.io/miaViz) : Microbiome analysis specific visualization
 - [miaSim](microbiome.github.io/miaSim) : Microbiome data simulations
 - [miaTime](microbiome.github.io/miaTime) : Microbiome time series analysis
 - [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external)
-
-
+- [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
+- [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
+- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for analyzing microbiome and other ecological data within the tidy framework
 
 
 ## Session Info {-}
