--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -42,14 +42,31 @@ devtools::install_github("microbiome/mia")
 
 Some of the R packages supporting the _TreeSummarizedExperiment_ framework include:
 
-- [mia](microbiome.github.io/mia) : Microbiome analysis tools   
-- [miaViz](microbiome.github.io/miaViz) : Microbiome analysis specific visualization
-- [miaSim](microbiome.github.io/miaSim) : Microbiome data simulations
-- [miaTime](microbiome.github.io/miaTime) : Microbiome time series analysis
+### mia family of methods
+
+- [mia](microbiome.github.io/mia) : generic microbiome analysis tools   
+- [miaViz](microbiome.github.io/miaViz) : microbiome data visualization
+- [miaSim](microbiome.github.io/miaSim) : microbiome data simulation
+- [miaTime](microbiome.github.io/miaTime) : microbiome time series analysis
+
+### Tree-based methods
+
 - [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external)
+
+### Differential abundance
+
 - [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
+
+### Manipulation
+
 - [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for analyzing microbiome and other ecological data within the tidy framework
+
+### Data
+
+- [curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html) a large collection of curated human microbiome data sets
+- [microbiomeDataSets](https://bioconductor.org/packages/release/data/experiment/html/microbiomeDataSets.html) microbiome demo data sets
+
 
 
 ## Session Info {-}
