--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,7 @@
 --- 
-title: "Orchestrating Microbiome Analysis"
+title: |
+  Orchestrating Microbiome Analysis
+  ![](general/figures/mia_logo.png){width=1in}
 documentclass: book
 site: bookdown::bookdown_site
 bibliography: [book.bib]
