--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -242,7 +242,7 @@ to learn about the additional arguments that we specify below.
 ```{r warning = FALSE}
 # perform the analysis 
 out <- ancombc(
-  x = tse, 
+  data = tse,
   formula = "pheno", 
   p_adj_method = "fdr", 
   prv_cut = 0, # no prev filtering necessary anymore 
